src/test/ui/issues/issue-7970a.stderr
error: unexpected end of macro invocation
  --> $DIR/issue-7970a.rs:16:5
   |
LL | macro_rules! one_arg_macro {
   | -------------------------- when calling this macro
...
LL |     one_arg_macro!();
   |     ^^^^^^^^^^^^^^^^^ unexpected end of macro invocation

error: aborting due to previous error

